--- a/Resources/Prototypes/Entities/Clothing/Shoes/misc.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/misc.yml
@@ -43,9 +43,9 @@
     sprite: Clothing/Shoes/Misc/duck-slippers.rsi
   - type: FootstepModifier
     footstepSoundCollection:
-      collection: FootstepCarpet
+      collection: FootstepDuck
       params:
-        variation: 0.07
+        variation: 0.02
   - type: Construction
     graph: ClothingShoeSlippersDuck
     node: shoes
