--- a/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
+++ b/Resources/Prototypes/_NF/Entities/Clothing/Head/hardsuit-helmets.yml
@@ -240,6 +240,7 @@
     sprite: _NF/Clothing/Head/Hardsuits/scaf.rsi
   - type: Clothing
     sprite: _NF/Clothing/Head/Hardsuits/scaf.rsi
+    equippedPrefix: off
   - type: PressureProtection
     highPressureMultiplier: 0.525
     lowPressureMultiplier: 1000
@@ -249,10 +250,15 @@
         Blunt: 0.9
         Slash: 0.9
         Piercing: 0.8
+  - type: ToggleableVisuals
+    spriteLayer: light
+  - type: ItemTogglePointLight
   - type: PointLight
+    enabled: false
     radius: 7
     energy: 2
     #color: "#d6adff"
+  - type: Appearance
 
 #Tactical hardsuit Helmet
 - type: entity
