--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -78,6 +78,10 @@
 - type: Tag
   id: Cutlet
 
+# Needed for fish fillets and recipes referencing the Fish tag
+- type: Tag
+  id: Fish
+
 # Raw
 
 - type: entity
