--- a/Resources/Prototypes/_Goobstation/Recipes/Construction/Graphs/mechs/gygax_construction.yml
+++ b/Resources/Prototypes/_Goobstation/Recipes/Construction/Graphs/mechs/gygax_construction.yml
@@ -80,11 +80,12 @@
           key: "enum.MechAssemblyVisuals.State"
           data: 9
 
-      - tag: CapacitorStockPart
-        name: stack-capacitor
+      - component: PowerCell
+        name: construction-insert-info-examine-name-power-cell
+        store: battery-container
         icon:
-          sprite: Objects/Misc/stock_parts.rsi
-          state: capacitor
+          sprite: Objects/Power/power_cells.rsi
+          state: small
         completed:
         - !type:VisualizerDataInt
           key: "enum.MechAssemblyVisuals.State"
