--- a/Resources/Prototypes/_Mono/Entities/Clothing/Head/Hardsuits/viper_group.yml
+++ b/Resources/Prototypes/_Mono/Entities/Clothing/Head/Hardsuits/viper_group.yml
@@ -13,7 +13,7 @@
   - type: NightVision
     flashDurationMultiplier: 2
     isEquipment: true
-    color: "#FAA70F"
+    color: "#999999"
   - type: PressureProtection
     highPressureMultiplier: 0.08
     lowPressureMultiplier: 1000
@@ -45,9 +45,8 @@
     color: "#faa70f"
   - type: ThermalVision
     flashDurationMultiplier: 2
-    pulseTime: 4
+    pulseTime: 6
     isEquipment: true
-    color: "#ED7B2D"
     toggleAction: PulseThermalVision
   - type: ShowHealthBars
   - type: PressureProtection
