фикс и добавление текстурки.. боже я пройду юнит тест

--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/meat.yml
@@ -176,7 +176,7 @@
     - Meat
     - Fish
   - type: Sprite
-    state: fish
+    state: fish_fillet
   - type: SolutionContainerManager
     solutions:
       food:
