--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Fishing/fish.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Fishing/fish.yml
@@ -14,9 +14,11 @@
     difficulty: 0.029
   - type: StaticPrice
     price: 250
-  - type: SliceableFood
-    count: 2
-    slice: FoodCuredCarp
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
   - type: SolutionContainerManager
     solutions:
       food:
@@ -33,9 +35,11 @@
     difficulty: 0.038
   - type: StaticPrice
     price: 750
-  - type: SliceableFood
-    count: 3
-    slice: FoodCuredCarp
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishAlien
@@ -48,6 +52,11 @@
     state: alien
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishAngler
@@ -60,6 +69,11 @@
     state: angler
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishBass
@@ -72,6 +86,11 @@
     state: bass
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishBingle
@@ -84,6 +103,11 @@
     state: bingle
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishBlob
@@ -96,6 +120,11 @@
     state: blob
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishBlueFintuna
@@ -108,6 +137,11 @@
     state: blue_fintuna
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 # - type: entity
 #   id: FishBoyFisher
@@ -132,6 +166,11 @@
     state: catfish
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishTropicalClown
@@ -144,6 +183,11 @@
     state: clown
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 # - type: entity
 #   id: FishNukeDisk
@@ -168,6 +212,11 @@
     state: gib
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishMutant
@@ -180,6 +229,11 @@
     state: mutant
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 # - type: entity
 #   id: FishNuker
@@ -204,6 +258,11 @@
     state: pufferfish
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishSilver
@@ -216,6 +275,11 @@
     state: silverfish
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishTropicalSun
@@ -228,6 +292,11 @@
     state: sun_tropical
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishToxic
@@ -240,6 +309,11 @@
     state: toxic
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 - type: entity
   id: FishTropical
@@ -252,6 +326,11 @@
     state: tropical
   - type: Item
     sprite: _Goobstation/Objects/Specific/Fishing/fish.rsi
+  - type: Butcherable
+    spawned:
+    - id: FoodMeatFishGeneric
+      min: 1
+      max: 3
 
 # - type: entity
 #   id: FishIan
