--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -132,13 +132,8 @@
       food:
         maxVol: 50
         reagents:
-        - ReagentId: Ash
-          Quantity: 10
-  - type: SolutionSpiker
-    sourceSolution: food
-    ignoreEmpty: true
-  - type: ScoopableSolution
-    solution: food
+        - ReagentId: Carbon
+          Quantity: 1
   - type: Extractable
     grindableSolutionName: food
 
