--- a/Resources/Prototypes/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/Recipes/Reactions/medicine.yml
@@ -662,3 +662,16 @@
       amount: 1
   products:
     Haloperidol: 5
+
+- type: reaction
+  id: Barozine
+  reactants:
+    DexalinPlus:
+      amount: 2
+    Plasma:
+      amount: 1
+      catalyst: true
+    Bicaridine:
+      amount: 1
+  products:
+    Barozine: 2
