фикс для пластика

--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/morgue.yml
@@ -132,7 +132,7 @@
       food:
         maxVol: 50
         reagents:
-        - ReagentId: Carbon
+        - ReagentId: Ash
           Quantity: 1
   - type: Extractable
     grindableSolutionName: food
