--- a/Resources/Prototypes/Recipes/Reactions/chemicals.yml
+++ b/Resources/Prototypes/Recipes/Reactions/chemicals.yml
@@ -514,3 +514,14 @@
       amount: 1
   products:
     Tazinide: 1
+
+- type: reaction
+  id: AshElectrolysis
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    Ash:
+      amount: 3
+  products:
+    Carbon: 1
