Дополнение к PR экономики

--- a/Resources/Prototypes/_Corvax/StatusIcon/job.yml
+++ b/Resources/Prototypes/_Corvax/StatusIcon/job.yml
@@ -117,7 +117,7 @@
     uiKey: enum.PdaUiKey.Key
     preinstalled:
       - CrewManifestCartridge
-      - NotekeeperCartridge
+      - YupiTransferCartridge
       - NewsReaderCartridge
       - MedTekCartridge
   - type: GuideHelp
