--- a/Resources/Prototypes/_Lua/Sponsor/Kelic/kelic.yml
+++ b/Resources/Prototypes/_Lua/Sponsor/Kelic/kelic.yml
@@ -8,7 +8,7 @@
   parent: ClothingBackpack
   id: ClothingBackpackKelic
   name: сумка с функцией РИГ "MS-06"
-  description: Компактная, износостойкая сумка, специально созданная для скафандра MS-06. 
+  description: Компактная, износостойкая сумка, специально созданная для скафандра MS-06.
   categories: [ HideSpawnMenu ]
   components:
   - type: Sprite
@@ -21,8 +21,8 @@
     - 0,0,19,9
   - type: StorageFill
     contents:
-      - id: ClothingNeckKelic 
-      - id: ClothingBeltKelic 
+      - id: ClothingNeckKelic
+      - id: ClothingBeltKelic
       - id: ClothingShoesBootsMagKelic
       - id: ClothingHandsGlovesCombatKelic
       - id: ClothingUniformJumpsuitKelic
@@ -37,7 +37,7 @@
       - id: WeaponCrusherKelic
       - id: HypoKelic
   - type: Tag
-    tags: [] # ignore "WhitelistChameleon" tag    
+    tags: [] # ignore "WhitelistChameleon" tag
   - type: ContainerContainer
     containers:
       storagebase: !type:Container
@@ -67,7 +67,7 @@
       - id: JawsOfLife
       - id: WelderExperimental
       - id: Multitool
-      
+
 # Neck
 - type: entity
   parent: ClothingNeckBase
@@ -295,7 +295,7 @@
     uiKey: enum.PdaUiKey.Key
     preinstalled:
       - CrewManifestCartridge
-      - NotekeeperCartridge
+      - YupiTransferCartridge
       - NanoTaskCartridge
       - NewsReaderCartridge
       - MedTekCartridge
