--- a/Resources/Prototypes/_Lua/Sponsor/Wisdom/wisdom.yml
+++ b/Resources/Prototypes/_Lua/Sponsor/Wisdom/wisdom.yml
@@ -224,7 +224,7 @@
     uiKey: enum.PdaUiKey.Key
     preinstalled:
     - CrewManifestCartridge
-    - NotekeeperCartridge
+    - YupiTransferCartridge
     - NewsReaderCartridge
     - AstroNavCartridge
     - MedTekCartridge
