--- a/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/_NF/Entities/Objects/Devices/cartridges.yml
@@ -65,6 +65,25 @@
       readonly: true
     - type: NFLedgerCartridge
 
+- type: entity
+  parent: NFBasePDACartridge
+  id: YupiTransferCartridge
+  name: YUPI transfer cartridge
+  description: A program for making player-to-player bank transfers.
+  components:
+    - type: Sprite
+      sprite: _NF/Objects/Devices/cartridge.rsi
+      state: cart-ledger
+    - type: Icon
+      sprite: _NF/Objects/Devices/cartridge.rsi
+      state: cart-ledger
+    - type: UIFragment
+      ui: !type:YupiTransferUi
+    - type: Cartridge
+      programName: yupi-program-name
+      icon: _NF/Interface/icons.rsi/ledger.png
+    - type: YupiTransferCartridge
+
 # Not a PDA cartridge (then why is this here)
 - type: entity
   parent: BaseItem
